--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         run: pip install selenium requests futures eventlet
 
       - name: Run main.py
-        run: python ${{ github.workspace }}/py/优质源/main.py
+        run: python ${{ github.workspace }}/main.py
      
         
       - name: 提交更改
