--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-     TZ: Asia/Shanghai
+     TZ: Asia/Jiangsu
 
     steps:
       - name: Checkout code
