--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,6 @@
+
+
+
 name: 优质源
 
 on:
@@ -30,3 +33,9 @@ jobs:
       - name: 提交更改
         run: |
 
+          git config user.email "zhoujck@live.com"
+          git config user.name "zhoujck" 
+          git add .
+          git commit -m "action: `date`"
+          git push -f
+     
