--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-     TZ: Asia/Jiangsu
+     TZ: Asia/Shanghai
 
     steps:
       - name: Checkout code
