--- a/.github/workflows/ok.yml
+++ b/.github/workflows/ok.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Install dependencies
         run: pip install demjson3 --break-system-packages
-             pip install selenium requests futures eventlet
+             pip install requests==2.31.0
 
       - name: Run t.py
         run: python ${{ github.workspace }}/ok.py
