--- a/.github/workflows/ok.yml
+++ b/.github/workflows/ok.yml
@@ -21,8 +21,7 @@ jobs:
           python-version: 3.x
 
       - name: Install dependencies
-        run: pip install demjson3 --break-system-packages
-             pip install requests==2.31.0
+        run: pip install demjson3 requests==2.31.0
 
       - name: Run t.py
         run: python ${{ github.workspace }}/ok.py
