--- a/.github/workflows/ok.yml
+++ b/.github/workflows/ok.yml
@@ -32,7 +32,13 @@ jobs:
 
           git config user.email "zhoujck@live.com"
           git config user.name "zhoujck" 
+
+
           git add .
-          git commit -m "action: `date`"
-          git push -f
+          if ! git diff-index --quiet HEAD --; then
+          git commit -m "更新源 $(date +%Y%m%d%H%M)"
+          git push -f origin master
+          else
+          echo "没有文件更新，不执行 git push"
+          fi
      
