--- a/.github/workflows/ok.yml
+++ b/.github/workflows/ok.yml
@@ -37,7 +37,7 @@ jobs:
           git add .
           if ! git diff-index --quiet HEAD --; then
           git commit -m "更新源 $(date +%Y%m%d%H%M)"
-          git push -f origin master
+          git push -f origin main
           else
           echo "没有文件更新，不执行 git push"
           fi
