--- a/.github/workflows/iptv.yml
+++ b/.github/workflows/iptv.yml
@@ -27,7 +27,7 @@ jobs:
         run: pip install selenium requests futures eventlet
 
       - name: Run main.py
-        run: python ${{ github.workspace }}/main.py
+        run: python ${{ github.workspace }}/tools/iptv.py
      
         
       - name: 提交更改
