--- a/.github/workflows/box.yml
+++ b/.github/workflows/box.yml
@@ -31,7 +31,7 @@ jobs:
           #\cp -pdr dianshi_merged_with_app_sites.json ../dianshi.json
           #\cp -pdr jsm_merged_with_app_sites.json ../jsm.json
           \cp -pdr okjar.txt ../okjar.txt
-          rm -rf ok_cleaned.json ok_cleaned.json okjar.txt
+          rm -rf ok_cleaned.json jo_cleaned.json okjar.txt
           cd ../
         shell: bash
         
