--- a/.github/workflows/iptv.yml
+++ b/.github/workflows/iptv.yml
@@ -28,11 +28,10 @@ jobs:
 
       - name: Run main.py
         run: python ${{ github.workspace }}/tools/iptv.py
-     
-        
+         \cp -pdr ./output/ipv4/result.txt .../live.txt
+          
       - name: 提交更改
         run: |
-
           git config user.email "zhoujck@live.com"
           git config user.name "zhoujck" 
           git add .
