--- a/.github/workflows/iptv.yml
+++ b/.github/workflows/iptv.yml
@@ -27,6 +27,10 @@ jobs:
         run: | 
           pip install selenium requests futures eventlet
           python ./tools/iptv.py
+        shell: bash
+
+      - name: move
+        run: | 
           \cp -pdr ./output/ipv4/result.txt ../live.txt
         shell: bash
           
